--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1"
+    "react-native-screens": "^3.30.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
